# opengl_testing1

./: .gitignore  CMakeLists.txt  README.md  main_qt.cpp  main_sdl.cpp
gfx/: gfx.cpp  gfx.hpp  gfx_factory.cpp  gfx_factory.hpp  gfx_opengl.cpp  gfx_opengl.hpp
qt/: opengl_window.cpp  opengl_window.hpp  qt_window.cpp  qt_window.hpp
sdl/: sdl_window.cpp  sdl_window.hpp
shaders/: smooth_ads_twoside_v150.frag  smooth_ads_twoside_v150.vert  smooth_ads_v150.frag  smooth_ads_v150.vert
